--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gimp (2.8.20-2) unstable; urgency=medium
+
+  * Remove libart from build-deps (Closes: #885798)
+  * Apply patch from Alexis Scheuer and Bernhard Übelacker to fix freeze in
+    Cage Transform (Closes: #809064)
+  * Add missing build-dependency on dh-python
+  * Remove obsolete gimp-dbg package
+
+ -- Ari Pollak <ari@debian.org>  Sat, 24 Feb 2018 19:50:54 -0500
+
 gimp (2.8.20-1.1) unstable; urgency=medium
 
   * Non-maintainer upload.
