--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gimp (2.8.20-3) UNRELEASED; urgency=medium
+
+  * Switch maintainer to Debian GNOME Team, with Ari's permission
+  * Update Vcs fields for migration to https://salsa.debian.org/
+
+ -- Jeremy Bicha <jbicha@debian.org>  Wed, 28 Mar 2018 09:48:25 -0400
+
 gimp (2.8.20-2) unstable; urgency=medium
 
   * Remove libart from build-deps (Closes: #885798)
