Drop all patches (except 01_hurd_ftbfs.patch): obsolete

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ gimp (2.10.0~RC1-1) UNRELEASED; urgency=medium
   * Add new Build-Depends: gegl, glib-networking, libgexiv2-dev,
     libmypaint-dev, libopenjp2-7-dev (Closes: #827083), libopenexr-dev,
     libwebp-dev, mypaint-brushes, python-cairo-dev
+  * Drop all patches (except 01_hurd_ftbfs.patch) since they are obsolete
+    with the new release
 
  -- Jeremy Bicha <jbicha@debian.org>  Wed, 28 Mar 2018 12:38:38 -0400
 
