--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gimp (2.10.0~RC2-1) UNRELEASED; urgency=medium
+
+  * New upstream release candidate (Closes: #887717)
+
+ -- Jeremy Bicha <jbicha@debian.org>  Thu, 19 Apr 2018 11:59:19 -0400
+
 gimp (2.10.0~RC1-1) experimental; urgency=medium
 
   * New upstream release candidate (LP: #1759625)
