--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ gimp (2.10.0~RC2-1) UNRELEASED; urgency=medium
   * New upstream release candidate (Closes: #887717)
   * Add Breaks/Replaces for file that used to be in gimp-plugin-registry
     (Closes: #895387)
+  * gimp.install: Update for new AppStream metadata location
 
  -- Jeremy Bicha <jbicha@debian.org>  Thu, 19 Apr 2018 11:59:19 -0400
 
