--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gimp (2.10.0~RC2-2) UNRELEASED; urgency=medium
+
+  * Fixes Open Location (Closes: #896812)
+
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 24 Apr 2018 10:33:13 -0400
+
 gimp (2.10.0~RC2-1) experimental; urgency=medium
 
   [ Jeremy Bicha ]
