--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-gimp (2.10.0~RC2-2) UNRELEASED; urgency=medium
+gimp (2.10.0-1) UNRELEASED; urgency=medium
 
-  * Fixes Open Location (Closes: #896812)
+  * New upstream release
+    - Fixes Open Location (Closes: #896812)
+    - See extensive release notes at
+      https://www.gimp.org/release-notes/gimp-2.10.html
 
  -- Jeremy Bicha <jbicha@debian.org>  Tue, 24 Apr 2018 10:33:13 -0400
 
