--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ gimp (2.10.0-1) UNRELEASED; urgency=medium
     - Fixes Open Location (Closes: #896812)
     - See extensive release notes at
       https://www.gimp.org/release-notes/gimp-2.10.html
+  * Bump minimum gegl version to 0.4.0
 
  -- Jeremy Bicha <jbicha@debian.org>  Tue, 24 Apr 2018 10:33:13 -0400
 
