--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ gimp (2.10.0-1) UNRELEASED; urgency=medium
     - See extensive release notes at
       https://www.gimp.org/release-notes/gimp-2.10.html
   * Bump minimum gegl version to 0.4.0
+  * debian/libgimp2.0.symbols: Add new symbol
 
  -- Jeremy Bicha <jbicha@debian.org>  Tue, 24 Apr 2018 10:33:13 -0400
 
