--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gimp (2.10.0-2) UNRELEASED; urgency=medium
+
+  * Fix arch:all build after gimp-python split
+
+ -- Jeremy Bicha <jbicha@debian.org>  Sat, 28 Apr 2018 10:07:43 -0400
+
 gimp (2.10.0-1) unstable; urgency=medium
 
   * New upstream release
