Cherry-pick patch to update gimp.pc for gegl soname bump

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ gimp (2.10.0-3) UNRELEASED; urgency=medium
 
   * Fix dh_python2 override
   * Bump gimp-python's Breaks/Replaces: gimp because of mistake in 2.10.0-2
+  * Cherry-pick 0002-gimp.pc-Fix-reference-to-gegl-0.3.patch:
+    - Update gimp.pc for gegl soname bump
 
  -- Jeremy Bicha <jbicha@debian.org>  Sun, 29 Apr 2018 06:28:34 -0400
 
