--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 gimp (2.10.0-3) UNRELEASED; urgency=medium
 
   * Fix dh_python2 override
+  * Bump gimp-python's Breaks/Replaces: gimp because of mistake in 2.10.0-2
 
  -- Jeremy Bicha <jbicha@debian.org>  Sun, 29 Apr 2018 06:28:34 -0400
 
