--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ gimp (2.10.0-4) UNRELEASED; urgency=medium
   * Use --without-appdata-test to ensure consistent results even if
     appstream-util is installed. The test is disabled because it requires
     network access. (Closes: #897179)
+  * Update debian/gbp.conf
 
- -- Jeremy Bicha <jbicha@debian.org>  Sun, 29 Apr 2018 10:16:52 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Sun, 20 May 2018 22:46:03 -0400
 
 gimp (2.10.0-3) unstable; urgency=medium
 
