New upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-gimp (2.10.0-4) UNRELEASED; urgency=medium
+gimp (2.10.2-1) UNRELEASED; urgency=medium
 
   * Use --without-appdata-test to ensure consistent results even if
     appstream-util is installed. The test is disabled because it requires
     network access. (Closes: #897179)
   * Update debian/gbp.conf
+  * New upstream release
 
- -- Jeremy Bicha <jbicha@debian.org>  Sun, 20 May 2018 22:46:03 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Sun, 20 May 2018 22:49:21 -0400
 
 gimp (2.10.0-3) unstable; urgency=medium
 
