--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gimp (2.10.6-1) UNRELEASED; urgency=medium
+
+  * New upstream release (Closes: #900819)
+
+ -- Jeremy Bicha <jbicha@debian.org>  Mon, 20 Aug 2018 10:00:23 -0400
+
 gimp (2.10.2-1) unstable; urgency=medium
 
   * New upstream release
