--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-gimp (2.10.6-1) UNRELEASED; urgency=medium
+gimp (2.10.6-1) unstable; urgency=medium
 
   * New upstream release (Closes: #900819)
+  * debian/libgimp2.0.symbols: Add new symbols
+  * Bump minimum babl to 0.1.56 and gegl to 0.4.8
+  * debian/gimp.install: Install gimp-test-clipboard
+  * Update install files now that gimp add-ons are installed in subdirectories
 
- -- Jeremy Bicha <jbicha@debian.org>  Mon, 20 Aug 2018 10:00:23 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 21 Aug 2018 13:42:06 -0400
 
 gimp (2.10.2-1) unstable; urgency=medium
 
