--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gimp (2.10.8-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Thu, 08 Nov 2018 20:13:00 -0500
+
 gimp (2.10.6-3) unstable; urgency=medium
 
   * Add X-Ubuntu-Use-Langpack to opt in to Ubuntu language pack handling
