--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gimp (2.10.10-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- James Lu <james@overdrivenetworks.com>  Tue, 09 Apr 2019 01:08:56 -0700
+
 gimp (2.10.8-2) unstable; urgency=medium
 
   * Restore -Wl,-O1 to our LDFLAGS
