--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ gimp (2.10.10-0utopia1) UNRELEASED; urgency=medium
   * New upstream release
     - Fix grid spacing being truncated from 1px to 0.90px when losing focus /
       exiting the config window (upstream issue #2470)
+  * debian/gimp(-python).install: add new plugins file-dds, spyro_plus
 
  -- James Lu <james@overdrivenetworks.com>  Tue, 09 Apr 2019 01:08:56 -0700
 
